--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 streamlit==1.38.0
 streamlit-webrtc==0.47.1
-opencv-python-headless==4.10.0.84
-numpy==1.26.4
-pandas==2.2.2
+opencv-python-headless==4.9.0.80
+numpy==1.24.4
+pandas==2.0.3
 face-recognition==1.3.0
 face-recognition-models==0.3.0
-dlib==19.24.2
+dlib-bin==19.24.2
