--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,5 @@ streamlit-webrtc==0.47.1
 opencv-python-headless==4.9.0.80
 numpy==1.24.4
 pandas==2.0.3
-face-recognition==1.3.0
-face-recognition-models==0.3.0
-dlib-bin==19.24.2
+mediapipe==0.10.14
+scikit-learn==1.3.2
