--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,6 @@ ml_dtypes==0.5.3
 narwhals==2.6.0
 numpy==1.26.4
 opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
 opt_einsum==3.4.0
 packaging==25.0
 pandas==2.3.3
@@ -43,6 +42,7 @@ pytz==2025.2
 referencing==0.36.2
 requests==2.32.5
 rpds-py==0.27.1
+scikit-learn
 scipy==1.16.2
 sentencepiece==0.2.1
 six==1.17.0
