--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ jsonschema-specifications==2025.9.1
 kiwisolver==1.4.9
 MarkupSafe==3.0.3
 matplotlib==3.10.6
-mediapipe==
+mediapipe>=0.10.9
 ml_dtypes==0.5.3
 narwhals==2.6.0
 numpy==1.26.4
@@ -57,3 +57,4 @@ tzdata==2025.2
 urllib3==2.5.0
 
 watchdog==6.0.0
+
