--- a/requirements.txt
+++ b/requirements.txt
@@ -1,58 +1,8 @@
-absl-py==2.3.1
-altair==5.5.0
-attrs==25.3.0
-blinker==1.9.0
-cachetools==6.2.0
-certifi==2025.8.3
-cffi==2.0.0
-charset-normalizer==3.4.3
-click==8.3.0
-colorama==0.4.6
-contourpy==1.3.3
-cycler==0.12.1
-flatbuffers==25.9.23
-fonttools==4.60.1
-gitdb==4.0.12
-GitPython==3.1.45
-idna==3.10
-jax==0.7.1
-jaxlib==0.7.1
-Jinja2==3.1.6
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-kiwisolver==1.4.9
-MarkupSafe==3.0.3
-matplotlib==3.10.6
-mediapipe==0.10.8
-ml_dtypes==0.5.3
-narwhals==2.6.0
-numpy==1.26.4
-opencv-contrib-python==4.11.0.86
-opt_einsum==3.4.0
-packaging==25.0
-pandas==2.3.3
-pillow==11.3.0
-protobuf==4.25.8
-pyarrow==21.0.0
-pycparser==2.23
-pydeck==0.9.1
-pyparsing==3.2.5
-python-dateutil==2.9.0.post0
-pytz==2025.2
-referencing==0.36.2
-requests==2.32.5
-rpds-py==0.27.1
-scikit-learn
-scipy==1.16.2
-sentencepiece==0.2.1
-six==1.17.0
-smmap==5.0.2
-sounddevice==0.5.2
 streamlit==1.50.0
-tenacity==9.1.2
-toml==0.10.2
-tornado==6.5.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-watchdog==6.0.0
+opencv-contrib-python==4.11.0.86
+numpy==1.26.4
+pandas==2.3.3
+scikit-learn
+streamlit-webrtc
+pillow==11.3.0
+av
