--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-streamlit==1.50.0
-opencv-contrib-python==4.11.0.86
+streamlit==1.38.0
+opencv-python-headless==4.10.0.84
 numpy==1.26.4
-pandas==2.3.3
-scikit-learn
-pillow==11.3.0
-pytz
+pandas==2.2.2
+scikit-learn==1.5.2
+gspread==6.1.4
+google-auth==2.35.0
+google-auth-oauthlib==1.2.1
+google-auth-httplib2==0.2.0
+httplib2==0.22.0
+protobuf==4.25.3
+altair==5.5.0
