--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,4 @@ pandas==2.2.2
 scikit-learn==1.5.2
 gspread==6.1.4
 google-auth==2.35.0
-google-auth-oauthlib==1.2.1
-google-auth-httplib2==0.2.0
-httplib2==0.22.0
-protobuf==4.25.3
-altair==5.5.0
+pytz==2025.1
